# open-csi-publisher

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/: README.md  adding_a_dataset.md  architecture.md  branding.md  ci_cd.md  cli.md  config_format.md  docker.md  opendap.md  publish_endpoint.md  rest_api.md  running_locally.md  setup.md
sample_configs/: branding.yaml  hanna_resvoll_10min.json  isfjord_radio_solar_park_measurements3.json  kapp_thordsen_10minute.json  sources.yaml
src/open_csi_publisher/: __init__.py  branding.py  settings.py  sources.py
src/open_csi_publisher/api/: access.py  app.py  auth.py  deps.py  opendap.py  schemas.py  services.py
src/open_csi_publisher/cli/: create_config.py  known_variables.yaml  main.py  matching.py  validate.py
src/open_csi_publisher/core/: builder.py  config_schema.py  config_versioning.py  deployment.py  export.py  models.py  publish.py  search_index.py  variable_mapping.py
src/open_csi_publisher/index/: service.py
src/open_csi_publisher/providers/: base.py  thingsboard_client.py
src/open_csi_publisher/state/: db.py  models.py  repository.py
tests/: conftest.py  test_branding.py
tests/api/: conftest.py  test_access.py  test_app_factory.py  test_auth.py  test_auth_routes.py  test_branding_pages.py  test_dataset_detail_routes.py  test_dataset_listing_service.py  test_dataset_panel_js.py  test_datasets_page_html.py  test_datasets_route_json.py  test_dependencies.py  test_filter_js.py  test_listing_page_map_and_panel.py  test_map_js.py  test_map_page.py  test_opendap.py  test_publish_endpoint.py  test_settings.py
tests/cli/: test_create_config_noninteractive.py  test_matching.py  test_validate_command.py
tests/config/: test_config_schema.py  test_config_schema_discriminated_union.py  test_config_versioning.py  test_folder_config_provider.py  test_sample_configs.py  test_sources.py
tests/core/: test_builder.py  test_builder_coverage.py  test_builder_generic_csv.py  test_builder_provenance.py  test_config_versioning.py  test_deployment.py  test_export.py  test_publish.py  test_search_index.py  test_time_coverage.py  test_variable_mapping.py
tests/fixtures/configs/: restricted_station.json  string_extra_dimension_station.json
tests/loggernet/: test_file_index_refresh.py  test_fileset_pairing.py  test_provider.py  test_toa5_parser.py
tests/providers/: test_generic_csv_provider.py  test_thingsboard_client.py  test_thingsboard_config_provider.py  test_thingsboard_data_provider.py
tests/state/: test_state_store.py
(+21 files in other folders)
