[project]
name = "open-csi-publisher"
version = "0.3.1"
description = "UNIS environmental monitoring data portal"
readme = "README.md"
authors = [
    { name = "Louis Pauchet", email = "louis.pauchet@insa-rouen.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "xarray>=2024.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "h5netcdf>=1.3",
    "h5py>=3.11",
    "xpublish>=0.5",
    "xpublish-opendap>=0.2",
    "cachetools>=5.3",
    # opendap-protocol (xpublish-opendap's dependency) imports pkg_resources at
    # module load time; modern uv-managed venvs don't bundle setuptools by
    # default. Recent setuptools (>=81ish) dropped pkg_resources entirely, so
    # this needs an explicit older pin, not just "any setuptools".
    "setuptools<81",
    "click>=8.1",
    "httpx>=0.27",
    "loguru>=0.7.3",
    "itsdangerous>=2.2.0",
    "authlib>=1.7.2",
]

[project.scripts]
open-csi-config = "open_csi_publisher.cli.create_config:main"
open-csi-publisher-cli = "open_csi_publisher.cli.main:cli"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: opt-in tests that parse large real sample files (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
